# Graphical-GCC

./: CMakeLists.txt  README.md
inc/: application.hpp  empty.hpp  window.hpp
inc/core/: compiler.hpp
inc/ui/: compiler_ui.hpp  fileExplorer.hpp
src/: application.cpp  main.cpp  window.cpp
src/core/: compiler.cpp
src/ui/: compiler_ui.cpp  fileExplorer.cpp
